# SubLLM

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
4d/668b4f0f4b/: metadata.json
4d/668b4f0f4b/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
4d/668b4f0f4b/1/: content_hash.txt  context.md  full.jsonl  metadata.json
4d/668b4f0f4b/10/: content_hash.txt  context.md  full.jsonl  metadata.json
4d/668b4f0f4b/11/: content_hash.txt  full.jsonl  metadata.json
4d/668b4f0f4b/12/: content_hash.txt  full.jsonl  metadata.json
4d/668b4f0f4b/13/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
4d/668b4f0f4b/14/: content_hash.txt  full.jsonl  metadata.json
4d/668b4f0f4b/15/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
4d/668b4f0f4b/2/: content_hash.txt  full.jsonl  metadata.json
4d/668b4f0f4b/3/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
4d/668b4f0f4b/4/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
4d/668b4f0f4b/5/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
4d/668b4f0f4b/6/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
4d/668b4f0f4b/7/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
4d/668b4f0f4b/8/: content_hash.txt  context.md  full.jsonl  metadata.json
4d/668b4f0f4b/9/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
82/88cc2b6fed/: metadata.json
82/88cc2b6fed/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
d7/d215a465d5/: metadata.json
d7/d215a465d5/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
docs/: DESIGN.md  RESEARCH.md
e0/0a1294fd54/: metadata.json
e0/0a1294fd54/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
examples/: basic_usage.py  claude_code.py  codex.py  gemini.py  multi_provider.py  openai_proxy.py
f0/1daa34dd5b/: metadata.json
f0/1daa34dd5b/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
f0/1daa34dd5b/1/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
src/subllm/: __init__.py  attachments.py  cache.py  cli.py  docs.py  errors.py  evals.py  model_registry.py  prompts.py  router.py  server.py  telemetry.py  types.py
src/subllm/providers/: __init__.py  base.py  claude_code.py  codex.py  gemini_cli.py
src/subllm/server_api/: __init__.py  app.py  errors.py  middleware.py  models.py  requests.py  responses.py  settings.py
tests/: test_claude_isolation.py  test_contract.py  test_eval_harness.py  test_file_inputs.py  test_model_registry.py  test_model_routing.py  test_observability.py  test_prompts.py  test_provider_failures.py  test_response_cache.py  test_server_boundary.py  test_server_controls.py  test_server_integration.py  test_session_mode.py  test_tool_execution_flags.py
tests/fixtures/provider_contracts/: claude-stream-failure.json  codex-completion-success.json  codex-stream-failure.json  gemini-completion-success.json  gemini-stream-failure.json
