[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subllm"
version = "0.5.0"
description = "Experimental personal-use gateway for evaluating CLI-backed LLM access behind a narrow OpenAI-compatible subset"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Tom Mathews" }]
keywords = ["llm", "claude", "codex", "gemini", "cli", "gateway"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "claude-agent-sdk>=0.1.36",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "pydantic>=2.12.0",
]

[project.urls]
Homepage = "https://github.com/Mathews-Tom/SubLLM"
Repository = "https://github.com/Mathews-Tom/SubLLM"
Issues = "https://github.com/Mathews-Tom/SubLLM/issues"

[project.optional-dependencies]
server = ["fastapi>=0.100.0", "uvicorn>=0.20.0"]
dev = ["mypy", "pytest", "pytest-asyncio", "ruff", "twine"]

[project.scripts]
subllm = "subllm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/subllm"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = ["claude_agent_sdk", "claude_agent_sdk.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "rich>=14.3.2",
]
